Fix media queries and spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,7 @@ body {
 .game-container {
   max-width: 360px;
   position: relative;
+  padding: 20px;
 }
 
 .content-container {
@@ -102,8 +103,8 @@ body {
   .content-container {
     color: white;
     opacity: .8;
-    padding: 52px;
-    max-width: unset;
+    padding: 30px;
+    max-width: 450px;
   }
 
   .content-container p {
@@ -138,3 +139,9 @@ body {
     font-size: 20px;
   }
 }
+
+/* @media screen and (min-width: 1000px) {
+  .content-container {
+    padding: 50px;
+  }
+} */
